Fix Masonry overflow issue

--- a/style.css
+++ b/style.css
@@ -57,9 +57,6 @@ header div h2, header div p {
     display: flex;
     flex-direction: column;
     align-items: center;
-}
-
-#project-box {
     padding: 30px;
 }
 
